load("//build/rules/helm:defs.bzl", helm_package = "package")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "chart_files",
    srcs = glob(
        ["**/*"],
        exclude = [
            "**/*.bazel",
            "**/*.bzl",
        ],
    ),
)

helm_package(
    name = "manor",
    srcs = [":chart_files"],
    version = "{STABLE_VERSION}",
)
